games/pacman_styles.css
h1 {
    background-color:beige;
    font-size: 32px;
    font-weight: bold;
    text-align: center;
    left: 50%;
    padding: 5px;
}

.pacman-container {
    background-color: #EEEEEE;
    height: 700px;
    padding: 10px;
    border: 2px solid black;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);

    display: flex;
    flex-direction: column;
    align-items: center;

}

.pacman-grid {
    display: grid;
    /* 28 columns of 20px each */
    grid-template-columns: repeat(28, 20px);
    grid-auto-rows: 20px;
    gap: 0; /* borders on .square will show the cell boundaries */
    width: calc(28 * 20px);
    height: calc(28 * 20px);
    border: 2px solid yellow;
}

.square {
    background-color: black;
    border: 1px solid yellow;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
}

.wall {
    background-color: blue;
}

.pac-dot {
    background-color: white;
    border-radius: 50%;
    /* width: 4px; */
    /* height: 4px; */
}

.ghost-lair {
    background-color: pink;
}

.power-pellet {
    background-color: orange;
    border-radius: 50%;
    /* width: 8px; */
    /* height: 8px; */
}

.pacman {
    background-color: yellow;
    border-radius: 50%;
    /* width: 8px; */
    /* height: 8px; */
}

.reset-button {
    background-color: #DDDDDD;
    border: 2px solid black;
    height: 50px;
    width: 150px;
    margin: 10px;
    padding: 12px;
    cursor: pointer;
    font-size: 16px;
    font-weight: bold;
    text-align: center;
}

.start-button {
    background-color: #DDDDDD;
    border: 2px solid black;
    height: 50px;
    width: 150px;
    margin: 10px;
    padding: 12px;
    cursor: pointer;
    font-size: 16px;
    font-weight: bold;
    text-align: center;
}

.reset-button:hover {
    background-color: #CCCCCC;
    transform: scale(1.05);
}

.start-button:hover {
    background-color: #CCCCCC;
    transform: scale(1.05);
}

.banner {
    background-color: #EEEEEE;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    font-size: 36px;
    font-weight: bold;
    text-align: center;
    margin-top: 20px;
    display:flex;
    justify-content: space-around;
}

.button-container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    margin-top: 20px;
}

